--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -5,6 +5,7 @@ http://ionicframework.com/docs/theming/ */
 /** Ionic CSS Variables **/
 :root {
   --background: #171616;
+  --ighlight-background: #1E1D1D;
 
   /** primary **/
   --ion-color-primary: #171616;
@@ -55,12 +56,13 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-danger-tint: #ec5d5d;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
+  --ion-color-dark: #1E1D1D;
+  --ion-color-dark-rgb: 30, 29, 29;
   --ion-color-dark-contrast: #ffffff;
+  --ion-text-color-dark: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark-shade: #1E1D1D;
+  --ion-color-dark-tint: #1E1D1D;
 
   /** medium **/
   --ion-color-medium: #92949c;
@@ -87,6 +89,7 @@ http://ionicframework.com/docs/theming/ */
 
   body {
     --background: #171616;
+    --ighlight-background: #1E1D1D;
 
     /** primary **/
     --ion-color-primary: #171616;
@@ -136,12 +139,12 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-danger-shade: #e92525;
     --ion-color-danger-tint: #ec5d5d;
 
-    --ion-color-dark: #f4f5f8;
+    --ion-color-dark: #1E1D1D;
     --ion-color-dark-rgb: 244, 245, 248;
     --ion-color-dark-contrast: #000000;
     --ion-color-dark-contrast-rgb: 0, 0, 0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
+    --ion-color-dark-shade: #1E1D1D;
+    --ion-color-dark-tint: #1E1D1D;
 
     --ion-color-medium: #989aa2;
     --ion-color-medium-rgb: 152, 154, 162;
