--- a/src/pages/DescriptionPage/DescriptionPage.css
+++ b/src/pages/DescriptionPage/DescriptionPage.css
@@ -1,3 +1,7 @@
+.img-interview{
+    height: 150px;
+}
+
 .description-text{
     max-width: 80%;
     margin: 0 auto;
@@ -27,4 +31,11 @@
 
 .button-description svg{
     font-size: 1.5rem;
+    
+}
+
+.shareButton svg{
+
+    width: 100%;
+    height: 100%;
 }
